# llm-revenue-analyzer

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
data/: pricing.yaml
docs/: architecture.md  budgets-alerts.md  data-model.md  pricing.md  runbooks.md
examples/: ingest_llm.sh  ingest_revenue.sh  queries.sh
scripts/: seed_demo_db.py
src/app/: db.py  guardrails.py  main.py  schemas.py  sqlgen.py  summarizer.py
src/app/core/: logger.py  settings.py
src/llm_revenue_analyzer/: __init__.py  main.py
src/llm_revenue_analyzer/analytics/: __init__.py  anomaly.py  service.py
src/llm_revenue_analyzer/api/: app.py  deps.py  middleware.py  routes_budgets.py  routes_events.py  routes_metrics.py  routes_system.py  schemas.py
src/llm_revenue_analyzer/budgets/: __init__.py  service.py
src/llm_revenue_analyzer/core/: logging.py  settings.py
src/llm_revenue_analyzer/observability/: metrics.py
src/llm_revenue_analyzer/pricing/: __init__.py  loader.py
src/llm_revenue_analyzer/scripts/: demo.py  seed.py
src/llm_revenue_analyzer/store/: db.py  models.py  repos.py
tests/: conftest.py  test_budgets.py  test_health.py  test_ingest.py  test_metrics.py  test_pricing.py
